--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,7 @@
         android:theme="@style/Theme.GymWorkout"
         tools:targetApi="31">
         <activity
-            android:name=".AddExerciseActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ExerciseInstructionsActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ExercisesActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,6 +21,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".WorkoutActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddExerciseActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ExerciseInstructionsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ExercisesActivity"
+            android:exported="true" />
+        <activity
+            android:name=".AddSetActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.login.SignupActivity"
             android:exported="false" />
